Remove unused code
(cherry picked from commit d7f94beac9735d1d6de1f1adebc09b4a65250628)